--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/jpreston-alt/Word-Guess-Game#readme",
   "dependencies": {
     "inquirer": "^7.1.0",
-    "jest": "^25.5.4"
+    "jest": "^25.5.4",
+    "random-words": "^1.1.1"
   }
 }
